- Updated retrieval of settings - Added PayWay domain classes - #433: Payment information of participant (and set bank transfers to payed) - #432: Sessions tab now also shows when the session is planned and which days the participant signed up for attendance - Session warnings page added

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -25,6 +25,7 @@ default.goto=Go to
 default.date.format=EEE MMMMM d, yyyy
 default.date.form.format=MM/dd/yyyy
 default.date.day.format=EEE MMM dd
+default.date.time.format=MMMMM d, yyyy HH:mm:ss
 default.number.format=0
 default.access.denied=Denied
 default.access.not.denied=Not denied
@@ -70,10 +71,10 @@ default.plan.label=Plan {0}
 default.toggle.label=Show/hide {0}
 default.add.selected.label=Add selected item(s) to "{0}"
 default.remove.selected.label=Remove selected item(s) from "{0}"
-default.edit.menu.label=Edit menu »
-default.overview.menu.label=Overviews menu »
-default.admin.menu.label=Admin menu »
-default.misc.menu.label=Misc »
+default.edit.menu.label=Edit menu \u00bb
+default.overview.menu.label=Overviews menu \u00bb
+default.admin.menu.label=Admin menu \u00bb
+default.misc.menu.label=Misc \u00bb
 default.export.menu.label=Export
 
 default.enabled.label=Visible
@@ -189,6 +190,7 @@ user.dateAdded.label=Date added
 user.personalInfo.label=Personal information
 user.changePassword.label=Change password
 user.emailDiscontinued.label=Email discontinued
+user.no.country.label=No country found
 
 # Event related messages
 event.label=Event
@@ -275,6 +277,8 @@ session.conflics.found.label=The following conflicts were found in the current p
 session.noShow.label=is not present at the scheduled date and time for the sessions
 session.sessionConflict.label=is scheduled at the same date and time in the sessions
 session.equipmentProblem.label=requires equipment that is not available in the scheduled room
+session.warnings.label=Session warnings
+session.noAuthorsFound.label=No authors found in this session!
 
 sessionList.label=Session
 sessionList.multiple.label=Sessions
@@ -332,6 +336,8 @@ participantDate.gender.unknown.label=Gender unknown
 participantDate.not.yet.registered.message=This user is not registered for "{0}".
 participantDate.would.like.to.add.message=Would you like to add this user as a participant?
 participantDate.show.personal.page.message=Show personal page
+participantDate.noPaymentId.label=No payment id found!
+participantDate.paymentIdNoPayment.label=Payment id found, but no payment made yet!
 
 # Participant type related messages
 participantType.label=Participant type
@@ -438,6 +444,27 @@ email.select.label=Select type of mail recipients
 email.edit.template.label=Edit template in a new window
 email.refresh.preview.label=Refresh email preview
 email.background.message=E-mail for {0} participant(s) is being processed in the background, you may leave this page
+
+# Order related messages
+order.label=Order
+order.multiple.label=Orders
+order.code.label=Order code
+order.amount.label=Amount
+order.status.label=Payment status
+order.status.payed.label=Payed/Confirmed
+order.status.not.payed.label=Not payed/Not confirmed
+order.status.full.refund.label=Full refund
+order.method.label=Payment method
+order.method.bank.label=Bank transfer
+order.method.ogone.label=Credit card/iDeal
+order.created.at.label=Created at
+order.updated.at.label=Updated at
+order.description.label=Order description
+order.set.payed.label=Set payed
+
+# Payment related messages
+payment.label=Payment
+payment.multiple.label=Payments
 
 # Misc related pages
 misc.lastNameUpperCase=Last name lower/upper case
