--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -13,7 +13,7 @@ default.not.inlist.message={0} met waarde "{2}" komt niet voor in de lijst {3}
 default.blank.message={0} mag niet leeg zijn
 default.not.equal.message={0} met waarde "{2}" mag niet gelijk zijn aan "{3}"
 default.null.message={0} mag niet leeg zijn
-default.not.unique.message={0} kan niet worden veranderd. {0} moet uniek zijn. Er is al één met {0} "{2}"
+default.not.unique.message={0} kan niet worden veranderd. {0} moet uniek zijn. Er is al \u00e9\u00e9n met {0} "{2}"
 default.exists.message="{0}" bestaat al als {1}
 
 default.paginate.prev=Vorige
@@ -25,6 +25,7 @@ default.goto=Ga naar
 default.date.format=EEE d MMMMM yyyy
 default.date.form.format=dd-MM-yyyy
 default.date.day.format=EEE dd MMM
+default.date.time.format=EEE d MMMMM yyyy HH:mm:ss
 default.number.format=0
 default.access.denied=Geen toegang
 default.access.not.denied=Toegang
@@ -70,10 +71,10 @@ default.plan.label=Plan {0}
 default.toggle.label=Laat zien/verberg {0}
 default.add.selected.label=Voeg geselecteerde item(s) toe aan "{0}"
 default.remove.selected.label=Verwijder geselecteerde item(s) van "{0}"
-default.edit.menu.label=Wijzigingen menu »
-default.overview.menu.label=Overzichten menu »
-default.admin.menu.label=Admin menu »
-default.misc.menu.label=Misc »
+default.edit.menu.label=Wijzigingen menu \u00bb
+default.overview.menu.label=Overzichten menu \u00bb
+default.admin.menu.label=Admin menu \u00bb
+default.misc.menu.label=Misc \u00bb
 default.export.menu.label=Exporteer
 
 default.enabled.label=Zichtbaar
@@ -189,6 +190,7 @@ user.dateAdded.label=Datum toegevoegd
 user.personalInfo.label=Persoonlijke informatie
 user.changePassword.label=Wijzig wachtwoord
 user.emailDiscontinued.label=Email opgezegd
+user.no.country.label=Geen land gevonden
 
 # Event related messages
 event.label=Evenement
@@ -275,6 +277,8 @@ session.conflics.found.label=De volgende conflicten zijn gevonden in de huidige 
 session.noShow.label=is niet beschikbaar op de geplande dag en tijd voor de sessies
 session.sessionConflict.label=is gepland op dezelfde dag en tijd in de sessies
 session.equipmentProblem.label=vereist apparatuur dat niet beschikbaar is op de geplande dag en tijd in de ruimte
+session.warnings.label=Sessie waarschuwingen
+session.noAuthorsFound.label=Geen auteurs gevonden in deze sessie!
 
 sessionList.label=Sessie
 sessionList.multiple.label=Sessies
@@ -332,6 +336,8 @@ participantDate.gender.unknown.label=Geslacht onbekend
 participantDate.not.yet.registered.message=Deze gebruiker is nog niet geregistreerd voor "{0}".
 participantDate.would.like.to.add.message=Wilt u deze gebruiker als deelnemer toevoegen?
 participantDate.show.personal.page.message=Persoonlijke pagina bekijken
+participantDate.noPaymentId.label=Geen betalings id gevonden
+participantDate.paymentIdNoPayment.label=Betalings id gevonden, maar er is nog geen betaling!
 
 # Participant type related messages
 participantType.label=Deelnemer type
@@ -414,7 +420,7 @@ page.multiple.label=Pagina's
 role.label=Rol
 role.multiple.label=Rollen
 
-# PartipantDay related messages
+# ParticipantDay related messages
 participantDay.label=Deelnemer dag
 participantDay.multiple.label=Deelnemer dagen
 participantDay.user.label=Gebruiker
@@ -438,6 +444,27 @@ email.select.label=Selecteer type mail ontvangers
 email.edit.template.label=Wijzig template in een nieuw tabblad
 email.refresh.preview.label=Herlaad email preview
 email.background.message=E-mail voor {0} deelnemer(s) worden in de achtergrond verwerkt, u mag deze pagina verlaten
+
+# Order related messages
+order.label=Bestelling
+order.multiple.label=Bestellingen
+order.code.label=Order code
+order.amount.label=Bedrag
+order.status.label=Betaling status
+order.status.payed.label=Betaald/Bevestigd
+order.status.not.payed.label=Niet betaald/Niet bevestigd
+order.status.full.refund.label=Volledige terugbetaling
+order.method.label=Payment method
+order.method.bank.label=Bank overschrijving
+order.method.ogone.label=Creditcard/iDeal
+order.created.at.label=Gecre\u00eberd op
+order.updated.at.label=Update op
+order.description.label=Beschrijving
+order.set.payed.label=Op betaald zetten
+
+# Payment related messages
+payment.label=Payment
+payment.multiple.label=Payments
 
 # Misc related pages
 misc.lastNameUpperCase=Last name lower/upper case
