- Added payment overview page - #455: Session planner: Internal Server Error experienced fixed

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -31,6 +31,7 @@ default.access.denied=Denied
 default.access.not.denied=Not denied
 default.export.data=Export data
 default.filter.on=Filter on
+default.total=Total
 default.totals.filtered=Total (with filters)
 default.totals.not.filtered=Total (without filters)
 default.last.updated=Last updated
@@ -338,6 +339,8 @@ participantDate.would.like.to.add.message=Would you like to add this user as a p
 participantDate.show.personal.page.message=Show personal page
 participantDate.noPaymentId.label=No payment id found!
 participantDate.paymentIdNoPayment.label=Payment id found, but no payment made yet!
+participantDate.total.label=Number of participants
+participantDate.other.state.label=Participants with state other than 1,2
 
 # Participant type related messages
 participantType.label=Participant type
@@ -461,10 +464,25 @@ order.created.at.label=Created at
 order.updated.at.label=Updated at
 order.description.label=Order description
 order.set.payed.label=Set payed
+order.free.label=Free
 
 # Payment related messages
 payment.label=Payment
 payment.multiple.label=Payments
+payment.no.attempt.label=No payment attempt made
+payment.not.completed.label=Not completed payment
+payment.by.payment.method.label=By payment method
+payment.by.amount.label=By amount
+payment.by.participant.state.label=By participant state
+payment.unconfirmed.label=Unconfirmed
+payment.confirmed.label=Confirmed
+payment.total.label=Total (unconfirmed/confirmed)
+payment.total.participants.label=Total number of participants
+payment.number.participants.label=Number of participants
+payment.number.payed.label=Total payed
+payment.number.not.completed.label=Total payment not completed
+payment.number.no.attempt.label=Total without any payment attempts
+payment.go.to.statistics.label=Go to payment statistics
 
 # Misc related pages
 misc.lastNameUpperCase=Last name lower/upper case
