--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -31,6 +31,7 @@ default.access.denied=Geen toegang
 default.access.not.denied=Toegang
 default.export.data=Export data
 default.filter.on=Filter op
+default.total=Totaal
 default.totals.filtered=Totaal (met filters)
 default.totals.not.filtered=Totaal (zonder filters)
 default.last.updated=Laatste update
@@ -338,6 +339,8 @@ participantDate.would.like.to.add.message=Wilt u deze gebruiker als deelnemer to
 participantDate.show.personal.page.message=Persoonlijke pagina bekijken
 participantDate.noPaymentId.label=Geen betalings id gevonden
 participantDate.paymentIdNoPayment.label=Betalings id gevonden, maar er is nog geen betaling!
+participantDate.total.label=Aantal deelnemers
+participantDate.other.state.label=Deelnemers met een andere status dan 1,2
 
 # Participant type related messages
 participantType.label=Deelnemer type
@@ -461,10 +464,25 @@ order.created.at.label=Gecre\u00eberd op
 order.updated.at.label=Update op
 order.description.label=Beschrijving
 order.set.payed.label=Op betaald zetten
+order.free.label=Gratis
 
 # Payment related messages
 payment.label=Payment
 payment.multiple.label=Payments
+payment.no.attempt.label=Geen poging tot betaling
+payment.not.completed.label=Betaling niet afgerond
+payment.by.payment.method.label=Per betalingsmethode
+payment.by.amount.label=Per bedrag
+payment.by.participant.state.label=Per deelnemer status
+payment.unconfirmed.label=Niet bevestiged
+payment.confirmed.label=Bevestigd
+payment.total.label=Total (niet bevestigd/bevestigd)
+payment.total.participants.label=Totaal aantal deelnemers
+payment.number.participants.label=Aantal deelnemers
+payment.number.payed.label=Totaal betaald
+payment.number.not.completed.label=Totaal betaling niet afgerond
+payment.number.no.attempt.label=Totaal zonder enkele betalings poging
+payment.go.to.statistics.label=Ga naar betalingsstatistieken
 
 # Misc related pages
 misc.lastNameUpperCase=Last name lower/upper case
