Added new 'presence' overview

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -341,6 +341,7 @@ participantDate.noPaymentId.label=No payment id found!
 participantDate.paymentIdNoPayment.label=Payment id found, but no payment made yet!
 participantDate.total.label=Number of participants
 participantDate.other.state.label=Participants with state other than 1,2
+participantDate.presence.label=Presence
 
 # Participant type related messages
 participantType.label=Participant type
