--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -341,6 +341,7 @@ participantDate.noPaymentId.label=Geen betalings id gevonden
 participantDate.paymentIdNoPayment.label=Betalings id gevonden, maar er is nog geen betaling!
 participantDate.total.label=Aantal deelnemers
 participantDate.other.state.label=Deelnemers met een andere status dan 1,2
+participantDate.presence.label=Aanwezig
 
 # Participant type related messages
 participantType.label=Deelnemer type
