- Added the new columns of the 'extra' table - Fixing the group_concat issue with older MySQL versions - Cleaning up

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -354,7 +354,11 @@ participantType.function.label=Function in session
 # Extra related messages
 extra.label=Extra
 extra.multiple.label=Extras
-extra.extra.label=Extra
+extra.title.label=Title for users
+extra.extra.label=Title in CMS
+extra.description.label=Short description for users
+extra.secondDescription.label=Detailed description for users
+extra.amount.label=Amount
 
 # Volunteering related messages
 volunteering.label=Volunteering job
