--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -354,7 +354,11 @@ participantType.function.label=Functie in sessie
 # Extra related messages
 extra.label=Extra
 extra.multiple.label=Extras
-extra.extra.label=Extra
+extra.title.label=Titel voor gebruikers
+extra.extra.label=Titel in de CMS
+extra.description.label=Korte beschrijving voor gebruikers
+extra.secondDescription.label=Uitgebreide beschrijving voor gebruikers
+extra.amount.label=Bedrag
 
 # Volunteering related messages
 volunteering.label=Vrijwilligers werk
