- Grails version upgraded to 2.3.1 - Various other plugins / libraries upgraded to newer versions - Several issues fixed

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -340,7 +340,7 @@ participantDate.show.personal.page.message=Show personal page
 participantDate.noPaymentId.label=No payment id found!
 participantDate.paymentIdNoPayment.label=Payment id found, but no payment made yet!
 participantDate.total.label=Number of participants
-participantDate.other.state.label=Participants with state other than 1,2
+participantDate.other.state.label=Participants with other states
 participantDate.presence.label=Presence
 
 # Participant type related messages
@@ -354,7 +354,11 @@ participantType.function.label=Function in session
 # Extra related messages
 extra.label=Extra
 extra.multiple.label=Extras
-extra.extra.label=Extra
+extra.title.label=Title for users
+extra.extra.label=Title in CMS
+extra.description.label=Short description for users
+extra.secondDescription.label=Detailed description for users
+extra.amount.label=Amount
 
 # Volunteering related messages
 volunteering.label=Volunteering job
