--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -340,7 +340,7 @@ participantDate.show.personal.page.message=Persoonlijke pagina bekijken
 participantDate.noPaymentId.label=Geen betalings id gevonden
 participantDate.paymentIdNoPayment.label=Betalings id gevonden, maar er is nog geen betaling!
 participantDate.total.label=Aantal deelnemers
-participantDate.other.state.label=Deelnemers met een andere status dan 1,2
+participantDate.other.state.label=Deelnemers met een andere status
 participantDate.presence.label=Aanwezig
 
 # Participant type related messages
@@ -354,7 +354,11 @@ participantType.function.label=Functie in sessie
 # Extra related messages
 extra.label=Extra
 extra.multiple.label=Extras
-extra.extra.label=Extra
+extra.title.label=Titel voor gebruikers
+extra.extra.label=Titel in de CMS
+extra.description.label=Korte beschrijving voor gebruikers
+extra.secondDescription.label=Uitgebreide beschrijving voor gebruikers
+extra.amount.label=Bedrag
 
 # Volunteering related messages
 volunteering.label=Vrijwilligers werk
