- Changed the payment queries to only filter on accepted participants - Removed empty test and replaced by previous tests

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -482,7 +482,7 @@ payment.by.participant.state.label=By participant state
 payment.unconfirmed.label=Unconfirmed
 payment.confirmed.label=Confirmed
 payment.total.label=Total (unconfirmed/confirmed)
-payment.total.participants.label=Total number of participants
+payment.total.participants.label=Total number of participants (Participants with state 1,2 only)
 payment.number.participants.label=Number of participants
 payment.number.payed.label=Total payed
 payment.number.not.completed.label=Total payment not completed
