--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -482,7 +482,7 @@ payment.by.participant.state.label=Per deelnemer status
 payment.unconfirmed.label=Niet bevestiged
 payment.confirmed.label=Bevestigd
 payment.total.label=Total (niet bevestigd/bevestigd)
-payment.total.participants.label=Totaal aantal deelnemers
+payment.total.participants.label=Totaal aantal deelnemers (Alleen deelnemers met status 1,2)
 payment.number.participants.label=Aantal deelnemers
 payment.number.payed.label=Totaal betaald
 payment.number.not.completed.label=Totaal betaling niet afgerond
