Updated the process of creating emails, allowing to create emails with more detailed information

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -446,8 +446,7 @@ email.info.label=Returned info:
 email.test.label=Send test mail
 email.send.label=Send e-mail
 email.send.multiple.label=Send e-mails
-email.all.participants.label=Send to all participants
-email.all.network.chairs.label=Send to all network chairs
+email.all.participants.label=Send to all qualified participants
 email.select.label=Select type of mail recipients
 email.edit.template.label=Edit template in a new window
 email.refresh.preview.label=Refresh email preview
