--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -446,8 +446,7 @@ email.info.label=Geretourneerde info:
 email.test.label=Verstuur test mail
 email.send.label=Verstuur e-mail
 email.send.multiple.label=Verstuur e-mails
-email.all.participants.label=Verstuur naar alle deelnemers
-email.all.network.chairs.label=Verstuur naar alle netwerk chairs
+email.all.participants.label=Verstuur naar alle in aanmerking komende deelnemers
 email.select.label=Selecteer type mail ontvangers
 email.edit.template.label=Wijzig template in een nieuw tabblad
 email.refresh.preview.label=Herlaad email preview
