- Badge export added - Fixed fee sorting - Updated the export services - Fixed event date issues on main page - Improved styling of links/buttons in overviews/forms - Fixed issue with placeholder plugin interfering with filtering on columns

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -342,6 +342,7 @@ participantDate.paymentIdNoPayment.label=Payment id found, but no payment made y
 participantDate.total.label=Number of participants
 participantDate.other.state.label=Participants with other states
 participantDate.presence.label=Presence
+participantDate.badges.label=Badges
 
 # Participant type related messages
 participantType.label=Participant type
