--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -342,6 +342,7 @@ participantDate.paymentIdNoPayment.label=Betalings id gevonden, maar er is nog g
 participantDate.total.label=Aantal deelnemers
 participantDate.other.state.label=Deelnemers met een andere status
 participantDate.presence.label=Aanwezig
+participantDate.badges.label=Badges
 
 # Participant type related messages
 participantType.label=Deelnemer type
