Payment status is now more clear and the amount of payment confirm buttons has been limited

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -468,7 +468,7 @@ order.method.ogone.label=Credit card/iDeal
 order.created.at.label=Created at
 order.updated.at.label=Updated at
 order.description.label=Order description
-order.set.payed.label=Set payed
+order.set.payed.label=Confirm payment
 order.free.label=Free
 
 # Payment related messages
