--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -468,7 +468,7 @@ order.method.ogone.label=Creditcard/iDeal
 order.created.at.label=Gecre\u00eberd op
 order.updated.at.label=Update op
 order.description.label=Beschrijving
-order.set.payed.label=Op betaald zetten
+order.set.payed.label=Betaling bevestingen
 order.free.label=Gratis
 
 # Payment related messages
