--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -506,3 +506,5 @@ misc.multipleAccPapers=Multiple accepted papers
 misc.chairs=Alle chairs
 misc.participantsSameName=Deelnemers met dezelfde naam
 misc.sessionsWithoutOrganizer=Sessies zonder organizer
+misc.sessionsWithoutChair=Sessies zonder chair
+misc.participantsNoCountry=Deelnemers zonder land
