New emails tab in participant show page

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -439,18 +439,27 @@ participantDay.not.found.label=No days found
 
 # Email related messages
 email.label=E-mail
-email.from.label=From
-email.to.label=To
-email.subject.label=Subject
-email.body.label=Body
+email.multiple.label=E-mails
+email.from.label=Email from
+email.to.label=Email to
+email.subject.label=Email subject
+email.body.label=Email message
 email.info.label=Returned info:
 email.test.label=Send test mail
 email.send.label=Send e-mail
 email.send.multiple.label=Send e-mails
+email.resend.label=Resend e-mail
+email.send.now.label=Send e-mail now
 email.all.participants.label=Send to all qualified participants
 email.select.label=Select type of mail recipients
 email.edit.template.label=Edit template in a new window
 email.refresh.preview.label=Refresh email preview
+email.not.yet.sent.label=Emails not yet sent
+email.sent.label=Emails sent
+email.date.created.label=Date/time created
+email.date.sent.label=Date/time sent
+email.original.sent.label=Original email sent
+email.copies.sent.label=Copies of this email sent
 email.background.message=E-mail for {0} participant(s) is being processed in the background, you may leave this page
 
 # Order related messages
