--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -439,18 +439,27 @@ participantDay.not.found.label=Geen dagen gevonden
 
 # Email related messages
 email.label=E-mail
-email.from.label=Van
-email.to.label=Aan
-email.subject.label=Onderwerp
-email.body.label=Bericht
+email.multiple.label=E-mails
+email.from.label=E-mail van
+email.to.label=E-mail Aan
+email.subject.label=E-mail Onderwerp
+email.body.label=E-mail Bericht
 email.info.label=Geretourneerde info:
 email.test.label=Verstuur test mail
 email.send.label=Verstuur e-mail
 email.send.multiple.label=Verstuur e-mails
+email.resend.label=Verzend e-mail nogmaals
+email.send.now.label=Verzend e-mail nu
 email.all.participants.label=Verstuur naar alle in aanmerking komende deelnemers
-email.select.label=Selecteer type mail ontvangers
+email.select.label=Selecteer type e-mail ontvangers
 email.edit.template.label=Wijzig template in een nieuw tabblad
-email.refresh.preview.label=Herlaad email preview
+email.refresh.preview.label=Herlaad e-mail preview
+email.not.yet.sent.label=Nog niet verzonden e-mails
+email.sent.label=Verzonden E-mails
+email.date.created.label=Datum/tijd gecreëerd
+email.date.sent.label=Datum/tijd verzonden
+email.original.sent.label=Originele e-mail verzonden
+email.copies.sent.label=Kopieën van deze e-mail verzonden
 email.background.message=E-mail voor {0} deelnemer(s) worden in de achtergrond verwerkt, u mag deze pagina verlaten
 
 # Order related messages
