- New misc page: participants without any payment attempts - Changed data source configuration

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -517,3 +517,4 @@ misc.participantsSameName=Participants with the same name
 misc.sessionsWithoutOrganizer=Sessions without organizer
 misc.sessionsWithoutChair=Sessions without chair
 misc.participantsNoCountry=Participants without country
+misc.noPaymentAttempt=Participants without payment attempts
