--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -517,3 +517,4 @@ misc.participantsSameName=Deelnemers met dezelfde naam
 misc.sessionsWithoutOrganizer=Sessies zonder organizer
 misc.sessionsWithoutChair=Sessies zonder chair
 misc.participantsNoCountry=Deelnemers zonder land
+misc.noPaymentAttempt=Deelnemers zonder betalings pogingen
