PayWay API calls implemented

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -467,17 +467,21 @@ order.label=Order
 order.multiple.label=Orders
 order.code.label=Order code
 order.amount.label=Amount
+order.refunded.amount.label=Refunded amount
 order.status.label=Payment status
 order.status.payed.label=Payed/Confirmed
 order.status.not.payed.label=Not payed/Not confirmed
-order.status.full.refund.label=Full refund
+order.status.refund.ogone.label=Online refund
+order.status.refund.bank.label=Bank refund
 order.method.label=Payment method
-order.method.bank.label=Bank transfer
-order.method.ogone.label=Credit card/iDeal
+order.method.bank.label=Bank payment
+order.method.ogone.label=Online payment
 order.created.at.label=Created at
 order.updated.at.label=Updated at
+order.refunded.at.label=Refunded at
 order.description.label=Order description
 order.set.payed.label=Confirm payment
+order.refund.payment.label=Refund payment
 order.free.label=Free
 
 # Payment related messages
