--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -467,15 +467,18 @@ order.label=Bestelling
 order.multiple.label=Bestellingen
 order.code.label=Order code
 order.amount.label=Bedrag
+order.refunded.amount.label=Terug betaalde bedrag
 order.status.label=Betaling status
 order.status.payed.label=Betaald/Bevestigd
 order.status.not.payed.label=Niet betaald/Niet bevestigd
-order.status.full.refund.label=Volledige terugbetaling
+order.status.refund.ogone.label=Online terugbetaling
+order.status.refund.bank.label=Bank terugbetaling
 order.method.label=Payment method
-order.method.bank.label=Bank overschrijving
-order.method.ogone.label=Creditcard/iDeal
+order.method.bank.label=Bank betaling
+order.method.ogone.label=Online betaling
 order.created.at.label=Gecre\u00eberd op
 order.updated.at.label=Update op
+order.refunded.at.label=Terug betaald op
 order.description.label=Beschrijving
 order.set.payed.label=Betaling bevestingen
 order.free.label=Gratis
