Added a help text next to the user auto-complete field

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -37,6 +37,7 @@ default.totals.not.filtered=Total (without filters)
 default.last.updated=Last updated
 default.back.to.top=Back to top
 default.please.wait=Please wait...
+default.help.autocomplete.text=To search for a participant, please specify at least 3 characters!
 
 default.created.message={0} "{1}" is created
 default.updated.message={0} "{1}" is updated
