New export: program at a glance

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -78,6 +78,7 @@ default.overview.menu.label=Overzichten menu \u00bb
 default.admin.menu.label=Admin menu \u00bb
 default.misc.menu.label=Misc \u00bb
 default.export.menu.label=Exporteer
+default.program.label=Programma overzicht
 
 default.enabled.label=Zichtbaar
 default.deleted.label=Verwijderen
