--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -78,6 +78,7 @@ default.overview.menu.label=Overviews menu \u00bb
 default.admin.menu.label=Admin menu \u00bb
 default.misc.menu.label=Misc \u00bb
 default.export.menu.label=Export
+default.program.label=Programme at a glance
 
 default.enabled.label=Visible
 default.deleted.label=Delete
