- 'Extra info' for participants added - Hide 'refund payment' if free payment was made

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -188,7 +188,7 @@ user.mobile.label=Mobile phone
 user.organisation.label=Organisation
 user.department.label=Department
 user.cv.label=CV
-user.extraInfo.label=Extra information
+user.extraInfo.label=Extra information about person
 user.dateAdded.label=Date added
 user.personalInfo.label=Personal information
 user.changePassword.label=Change password
@@ -328,6 +328,7 @@ participantDate.student.label=Student
 participantDate.studentRequested.label=Is student?
 participantDate.studentConfirmed.label=Confirmed
 participantDate.award.label=Participate for award
+participantDate.extraInfo.label=Extra information about current registration
 participantDate.registration.info.label=Registration info
 participantDate.personal.info.label=Personal info
 participantDate.extra.label=Extra
