--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -188,7 +188,7 @@ user.mobile.label=Mobiel nummer
 user.organisation.label=Organisatie
 user.department.label=Afdeling
 user.cv.label=CV
-user.extraInfo.label=Extra informatie
+user.extraInfo.label=Extra informatie over persoon
 user.dateAdded.label=Datum toegevoegd
 user.personalInfo.label=Persoonlijke informatie
 user.changePassword.label=Wijzig wachtwoord
@@ -328,6 +328,7 @@ participantDate.student.label=Student
 participantDate.studentRequested.label=Is student?
 participantDate.studentConfirmed.label=Bevestigd
 participantDate.award.label=Deelname voor award
+participantDate.extraInfo.label=Extra informatie over huidige registratie
 participantDate.registration.info.label=Registratie info
 participantDate.personal.info.label=Persoonlijke info
 participantDate.extra.label=Extra
