Updated the badges export

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -346,6 +346,9 @@ participantDate.total.label=Number of participants
 participantDate.other.state.label=Participants with other states
 participantDate.presence.label=Presence
 participantDate.badges.label=Badges
+participantDate.badges.payed.label=Badges (payed)
+participantDate.badges.not.payed.label=Badges (not payed)
+participantDate.badges.unconfirmed.label=Badges (unconfirmed bank transfers)
 
 # Participant type related messages
 participantType.label=Participant type
