--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -346,6 +346,9 @@ participantDate.total.label=Aantal deelnemers
 participantDate.other.state.label=Deelnemers met een andere status
 participantDate.presence.label=Aanwezig
 participantDate.badges.label=Badges
+participantDate.badges.payed.label=Badges (betaald)
+participantDate.badges.not.payed.label=Badges (niet betaald)
+participantDate.badges.unconfirmed.label=Badges (niet bevestigde bank overschrijvingen)
 
 # Participant type related messages
 participantType.label=Deelnemer type
