--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -430,13 +430,19 @@ page.multiple.label=Pages
 role.label=Role
 role.multiple.label=Roles
 
-# PartipantDay related messages
+# ParticipantDay related messages
 participantDay.label=Participant day
 participantDay.multiple.label=Participant days
 participantDay.user.label=User
 participantDay.day.label=Day
 participantDay.is.present.label=This participant has indicated to be present on the following days:
 participantDay.not.found.label=No days found
+
+# ElectionsAdvisoryBoard related messages
+electionsAdvisoryBoard.label='Advisory board' candidate
+electionsAdvisoryBoard.multiple.label='Advisory board' candidates
+electionsAdvisoryBoard.nameCandidate.label=Name of the candidate
+electionsAdvisoryBoard.noOfVotes.label=Number of votes
 
 # Email related messages
 email.label=E-mail
