--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -438,6 +438,12 @@ participantDay.day.label=Dag
 participantDay.is.present.label=Deze deelnemer heeft aangegeven op de volgende dagen aanwezig te zijn:
 participantDay.not.found.label=Geen dagen gevonden
 
+# ElectionsAdvisoryBoard related messages
+electionsAdvisoryBoard.label='Raad van Advies' kandidaat
+electionsAdvisoryBoard.multiple.label='Raad van Advies' kandidaten
+electionsAdvisoryBoard.nameCandidate.label=Naam van de kandidaat
+electionsAdvisoryBoard.noOfVotes.label=Totaal aantal stemmen
+
 # Email related messages
 email.label=E-mail
 email.multiple.label=E-mails
