Add accompanying persons functionality

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -336,6 +336,8 @@ participantDate.attendance.label=Aanwezigheid
 participantDate.volunteering.label=Vrijwillige taken
 participantDate.volunteering.select.label=Zou willen zijn
 participantDate.volunteering.add.label=als vrijwilliger
+participantDate.accompanyingPersons.label=Vergezelde personen
+participantDate.accompanyingPersons.person.label=persoon
 participantDate.gender.unknown.label=Geslacht onbekend
 participantDate.not.yet.registered.message=Deze gebruiker is nog niet geregistreerd voor "{0}".
 participantDate.would.like.to.add.message=Wilt u deze gebruiker als deelnemer toevoegen?
