--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -334,6 +334,8 @@ participantDate.attendance.label=Attendance
 participantDate.volunteering.label=Volunteering
 participantDate.volunteering.select.label=Would like to be
 participantDate.volunteering.add.label=as volunteer
+participantDate.accompanyingPersons.label=Accompanying persons
+participantDate.accompanyingPersons.person.label=person
 participantDate.gender.unknown.label=Gender unknown
 participantDate.not.yet.registered.message=This user is not registered for "{0}".
 participantDate.would.like.to.add.message=Would you like to add this user as a participant?
