Show error message if no accepted sessions were found when accessing the session warnings

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -264,6 +264,7 @@ equipment.imageUrl.label=Image URL
 # Session related messages
 session.label=Session
 session.multiple.label=Sessions
+session.multiple.accepted.label=Accepted sessions
 session.code.label=Code
 session.name.label=Name
 session.abstr.label=Abstract
