--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -264,6 +264,7 @@ equipment.imageUrl.label=Afbeelding URL
 # Session related messages
 session.label=Sessie
 session.multiple.label=Sessies
+session.multiple.accepted.label=Geaccepteerde sessies
 session.code.label=Code
 session.name.label=Naam
 session.abstr.label=Abstract
