Update eventDates email action to use a selectbox instead of checkboxes

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -214,6 +214,8 @@ eventDate.dateAsText.label=Datum als tekst
 eventDate.description.label=Beschrijving
 eventDate.longDescription.label=Lange beschrijving
 eventDate.createStatistics.label=Maak statistieken
+eventDate.andLater.label={0} en later
+eventDate.participants.label=Alle deelnemers die hebben deelgenomen in
 
 # Day related messages
 day.label=Dag
