--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -214,6 +214,8 @@ eventDate.dateAsText.label=Date as text
 eventDate.description.label=Description
 eventDate.longDescription.label=Long description
 eventDate.createStatistics.label=Create statistics
+eventDate.andLater.label={0} and later
+eventDate.participants.label=All participants who participated in
 
 # Day related messages
 day.label=Day
