Updated fee states / fee amounts / email codes / settings

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -292,6 +292,7 @@ feeState.label=Fee state
 feeState.multiple.label=Fee states
 feeState.name.label=Name
 feeState.isDefaultFee.label=Is default fee
+feeState.isAccompanyingPersonFee.label=Is accompanying person fee
 
 # Fee amount related messages
 feeAmount.label=Fee amount
@@ -301,6 +302,7 @@ feeAmount.numDaysStart.label=Nr of days start
 feeAmount.numDaysEnd.label=Nr of days end
 feeAmount.numDays.label=Nr of days
 feeAmount.feeAmount.label=Fee amount
+feeAmount.substituteName.label=Substitute name
 feeAmount.validation.max.message=You exceeded the maximum number of days possible
 feeAmount.validation.end.message=Ending day must be bigger or equal to starting day
 
