--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -292,6 +292,7 @@ feeState.label=Vergoedingsstatus
 feeState.multiple.label=Vergoedingsstatussen
 feeState.name.label=Naam
 feeState.isDefaultFee.label=Is standaard vergoeding
+feeState.isAccompanyingPersonFee.label=Is vergoeding voor extra personen
 
 # Fee amount related messages
 feeAmount.label=Vergoedings bedrag
@@ -301,6 +302,7 @@ feeAmount.numDaysStart.label=Nr. dagen start
 feeAmount.numDaysEnd.label=Nr. dagen eind
 feeAmount.numDays.label=Aantal dagen
 feeAmount.feeAmount.label=Bedrag
+feeAmount.substituteName.label=Vervangende naam
 feeAmount.validation.max.message=U heeft het mogelijke maximum aantal dagen overschreden
 feeAmount.validation.end.message=Eind dag moet groter of gelijk zijn aan start dag
 
