Fixed couple of merging errors

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -440,7 +440,7 @@ page.multiple.label=Pages
 role.label=Role
 role.multiple.label=Roles
 
-# PartipantDay related messages
+# ParticipantDay related messages
 participantDay.label=Participant day
 participantDay.multiple.label=Participant days
 participantDay.user.label=User
