--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -133,6 +133,8 @@ springSecurity.forgot.fail=Sorry. we were not able to find a user with that logi
 springSecurity.forgot.success=A new password has been send to you by mail
 springSecurity.forgot.code.request=An email with further instructions has been send to you by mail
 springSecurity.forgot.code.incorrect=The code is incorrect, please request a new code
+springSecurity.forgot.code.expired=The code has expired, please request a new code
+springSecurity.forgot.password.sent=A new password has already been sent to you, please check your email
 
 # Denied Page
 springSecurity.denied.title=Denied
