--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -133,6 +133,8 @@ springSecurity.forgot.fail=Sorry, we konden geen gebruiker vinden met deze login
 springSecurity.forgot.success=Een nieuw wachtwoord is naar u gemaild
 springSecurity.forgot.code.request=Een mail met verdere instructies is naar u gemaild
 springSecurity.forgot.code.incorrect=De code is niet correct, vraag astublieft een nieuwe code aan
+springSecurity.forgot.code.expired=De code is verlopen, vraag astublieft een nieuwe code aan
+springSecurity.forgot.password.sent=Een nieuw wachtwoord is al naar u verstuurd, check astublieft uw email
 
 # Denied Page
 springSecurity.denied.title=Geen toegang
