Update language files

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -126,7 +126,7 @@ springSecurity.login.lost.password=Als u uw wachtwoord bent vergeten, vraag dan 
 # Forgot password page
 springSecurity.forgot.title=Wachtwoord vergeten
 springSecurity.forgot.header=Een nieuw wachtwoord aanvragen
-springSecurity.forgot.button=Nieuw wachtwoord
+springSecurity.forgot.button=Verstuur aanvraag
 springSecurity.forgot.username.label=Login
 springSecurity.forgot.error=Sorry, we konden geen nieuw wachtwoord voor u aanmaken op dit moment
 springSecurity.forgot.fail=Sorry, we konden geen gebruiker vinden met deze login
