--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -71,8 +71,8 @@ default.send.label=Send {0}
 default.load.label=Load {0}
 default.plan.label=Plan {0}
 default.toggle.label=Show/hide {0}
-default.add.selected.label=Add selected item(s) to "{0}"
-default.remove.selected.label=Remove selected item(s) from "{0}"
+default.add.selected.label=Add selected item(s) to {0}
+default.remove.selected.label=Remove selected item(s) from {0}
 default.edit.menu.label=Edit menu \u00bb
 default.overview.menu.label=Overviews menu \u00bb
 default.admin.menu.label=Admin menu \u00bb
