--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -71,8 +71,8 @@ default.load.label=Laad {0}
 default.overview.label={0}
 default.plan.label=Plan {0}
 default.toggle.label=Laat zien/verberg {0}
-default.add.selected.label=Voeg geselecteerde item(s) toe aan "{0}"
-default.remove.selected.label=Verwijder geselecteerde item(s) van "{0}"
+default.add.selected.label=Voeg geselecteerde item(s) toe aan {0}
+default.remove.selected.label=Verwijder geselecteerde item(s) van {0}
 default.edit.menu.label=Wijzigingen menu \u00bb
 default.overview.menu.label=Overzichten menu \u00bb
 default.admin.menu.label=Admin menu \u00bb
